// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/tooltip/demo/arrow.tsx correctly 1`] = `
Array [
  <div
    class="ant-segmented"
    style="margin-bottom:24px"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Show"
        >
          Show
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Hide"
        >
          Hide
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Center"
        >
          Center
        </div>
      </label>
    </div>
  </div>,
  <div
    class="demo"
  >
    <div
      style="margin-inline-start:80px;white-space:nowrap"
    >
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
    </div>
    <div
      style="width:80px;float:inline-start"
    >
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
    </div>
    <div
      style="width:80px;margin-inline-start:344px"
    >
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
    </div>
    <div
      style="margin-inline-start:80px;clear:both;white-space:nowrap"
    >
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/arrow-point-at-center.tsx correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Align edge / 边缘对齐
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Arrow points to center / 箭头指向中心
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/auto-adjust-overflow.tsx correctly 1`] = `
<div
  style="display:flex;flex-direction:column;row-gap:16px"
>
  <h5
    class="ant-typography"
  >
    With \`getPopupContainer\`
  </h5>
  <div
    style="overflow:auto;position:relative;padding:24px;border:1px solid #e9e9e9"
  >
    <div
      style="width:200%;display:flex;flex-direction:column;align-items:center;row-gap:16px"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Adjust automatically / 自动调整
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Ignore / 不处理
        </span>
      </button>
    </div>
  </div>
  <h5
    class="ant-typography"
  >
    Without \`getPopupContainer\`
  </h5>
  <div
    style="overflow:auto;position:relative;padding:24px;border:1px solid #e9e9e9"
  >
    <div
      style="width:200%;display:flex;flex-direction:column;align-items:center;row-gap:16px"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Adjust automatically / 自动调整
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          Ignore / 不处理
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/basic.tsx correctly 1`] = `
<span>
  Tooltip will show on mouse enter.
</span>
`;

exports[`renders components/tooltip/demo/colorful.tsx correctly 1`] = `
Array [
  <div
    class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
    role="separator"
  >
    <span
      class="ant-divider-inner-text"
    >
      Presets
    </span>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="flex-wrap:wrap"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          pink
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          red
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          yellow
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          orange
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          cyan
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          green
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          blue
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          purple
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          geekblue
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          magenta
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          volcano
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          gold
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          lime
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
    role="separator"
  >
    <span
      class="ant-divider-inner-text"
    >
      Custom
    </span>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="flex-wrap:wrap"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          #f50
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          #2db7f5
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          #87d068
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          #108ee9
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/destroy-tooltip-on-hide.tsx correctly 1`] = `
<span>
  Tooltip will destroy when hidden.
</span>
`;

exports[`renders components/tooltip/demo/disabled.tsx correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Enable
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <span>
      Tooltip will show on mouse enter.
    </span>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/disabled-children.tsx correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <input
      class="ant-input ant-input-disabled"
      disabled=""
      placeholder="disabled"
      type="text"
      value=""
    />
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-input-number ant-input-number-disabled"
    >
      <div
        class="ant-input-number-handler-wrap"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="ant-input-number-handler ant-input-number-handler-up"
          role="button"
          unselectable="on"
        >
          <span
            aria-label="up"
            class="anticon anticon-up ant-input-number-handler-up-inner"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="up"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
              />
            </svg>
          </span>
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="ant-input-number-handler ant-input-number-handler-down"
          role="button"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down ant-input-number-handler-down-inner"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="ant-input-number-input-wrap"
      >
        <input
          autocomplete="off"
          class="ant-input-number-input"
          disabled=""
          role="spinbutton"
          step="1"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
    </label>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow ant-select-disabled"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            disabled=""
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-placeholder"
        />
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/placement.tsx correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-inline-start:80px;white-space:nowrap"
  >
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
  </div>
  <div
    style="width:80px;float:inline-start"
  >
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        LT
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Left
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        LB
      </span>
    </button>
  </div>
  <div
    style="width:80px;margin-inline-start:344px"
  >
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        RT
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Right
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        RB
      </span>
    </button>
  </div>
  <div
    style="margin-inline-start:80px;clear:both;white-space:nowrap"
  >
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/render-panel.tsx correctly 1`] = `
Array [
  <div
    class="ant-tooltip ant-tooltip-pure ant-tooltip-placement-top ant-tooltip-pink"
  >
    <div
      class="ant-tooltip-arrow"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        role="tooltip"
      >
        Hello, Pink Pure Panel!
      </div>
    </div>
  </div>,
  <div
    class="ant-tooltip ant-tooltip-pure ant-tooltip-placement-top"
    style="--antd-arrow-background-color:#f50"
  >
    <div
      class="ant-tooltip-arrow"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        role="tooltip"
        style="background:#f50"
      >
        Hello, Customize Color Pure Panel!
      </div>
    </div>
  </div>,
  <div
    class="ant-tooltip ant-tooltip-pure ant-tooltip-placement-bottomLeft"
  >
    <div
      class="ant-tooltip-arrow"
    />
    <div
      class="ant-tooltip-content"
      style="width:200px"
    >
      <div
        class="ant-tooltip-inner"
        role="tooltip"
      >
        Hello, Pure Panel!
      </div>
    </div>
  </div>,
]
`;
